<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="30dp"
    android:layout_marginEnd="30dp"
    android:layout_gravity="center"
    android:orientation="vertical">

    <ImageView
        android:layout_width="311dp"
        android:layout_height="175dp"
        android:elevation="4dp"
        android:src="@drawable/no_connection_image"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/title_no_connection"
        android:textColor="@color/bold_text"
        android:textSize="22sp"
        android:textAlignment="center"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/description_no_connection"
        android:textAlignment="center"
        android:textColor="@color/gray_text"
        android:textSize="16sp" />

    <Button
        android:id="@+id/tryAgainButton"
        android:layout_width="196dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/background_button"
        android:text="@string/try_again_no_connection"
        android:textColor="@color/white"
        android:layout_gravity="center"/>
</LinearLayout>