<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="4dp"
    android:layout_marginTop="1dp"
    android:layout_marginEnd="4dp"
    android:orientation="vertical"
    tools:ignore="SmallSp, contentDescription">

    <android.support.v7.widget.CardView
        android:id="@+id/bookCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        app:cardCornerRadius="4dp"
        app:cardElevation="2dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="115dp"
                android:layout_height="match_parent">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="15dp"
                    android:background="@color/card_image_background" />

                <ImageView
                    android:id="@+id/placeHolderImageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp"
                    android:scaleType="center"
                    android:src="@drawable/ic_book_error" />

                <ImageView
                    android:id="@+id/bookImageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp"
                    android:scaleType="centerCrop" />

            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title"
                        android:textColor="@color/text_gray"
                        android:textSize="13sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/titleTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/bold_text"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:maxLines="2"/>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:baselineAligned="false"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/author"
                            android:textColor="@color/text_gray"
                            android:textSize="13sp" />

                        <TextView
                            android:id="@+id/authorTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/bold_text"
                            android:textSize="16sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/page_count"
                            android:textColor="@color/text_gray"
                            android:textSize="13sp" />

                        <TextView
                            android:id="@+id/pageCountTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/bold_text"
                            android:textSize="16sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:baselineAligned="false"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/publisher"
                            android:textColor="@color/text_gray"
                            android:textSize="13sp" />

                        <TextView
                            android:id="@+id/publisherTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/bold_text"
                            android:textSize="16sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/language"
                            android:textColor="@color/text_gray"
                            android:textSize="13sp" />

                        <TextView
                            android:id="@+id/languageTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/bold_text"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <!--<LinearLayout-->
                        <!--android:layout_width="0dp"-->
                        <!--android:layout_height="match_parent"-->
                        <!--android:layout_weight="1"-->
                        <!--android:orientation="vertical">-->

                        <!--<TextView-->
                            <!--android:layout_width="wrap_content"-->
                            <!--android:layout_height="wrap_content"-->
                            <!--android:text="@string/quantity_to_replace"-->
                            <!--android:textColor="@color/text_gray"-->
                            <!--android:textSize="11sp" />-->

                        <!--<TextView-->
                            <!--android:id="@+id/replaceTextView"-->
                            <!--android:layout_width="wrap_content"-->
                            <!--android:layout_height="wrap_content"-->
                            <!--android:textColor="@color/bold_text"-->
                            <!--android:textSize="16sp"-->
                            <!--android:textStyle="bold" />-->
                    <!--</LinearLayout>-->
                </LinearLayout>

                <!--<LinearLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="match_parent"-->
                <!--android:layout_marginTop="8dp"-->
                <!--android:gravity="bottom"-->
                <!--android:orientation="horizontal">-->

                <!--<ImageView-->
                <!--android:id="@+id/expositionTimeImageView"-->
                <!--android:layout_width="14dp"-->
                <!--android:layout_height="14dp"-->
                <!--android:layout_marginEnd="14dp"-->
                <!--android:scaleType="centerCrop"-->
                <!--android:src="@drawable/ic_exposition_time" />-->

                <!--<ImageView-->
                <!--android:id="@+id/newlyReceivedImageView"-->
                <!--android:layout_width="14dp"-->
                <!--android:layout_height="14dp"-->
                <!--android:layout_marginEnd="14dp"-->
                <!--android:src="@drawable/ic_newly_received" />-->

                <!--<ImageView-->
                <!--android:id="@+id/delayImageView"-->
                <!--android:layout_width="14dp"-->
                <!--android:layout_height="14dp"-->
                <!--android:layout_marginEnd="14dp"-->
                <!--android:src="@drawable/ic_delay" />-->

                <!--<ImageView-->
                <!--android:id="@+id/stockTypeImageView"-->
                <!--android:layout_width="14dp"-->
                <!--android:layout_height="14dp"-->
                <!--android:layout_marginEnd="14dp"-->
                <!--android:src="@drawable/ic_hanger" />-->

                <!--<ImageView-->
                <!--android:id="@+id/rfidImageView"-->
                <!--android:layout_width="14dp"-->
                <!--android:layout_height="14dp"-->
                <!--android:layout_marginEnd="14dp"-->
                <!--android:src="@drawable/ic_rfid" />-->

                <!--</LinearLayout>-->
            </LinearLayout>
        </LinearLayout>

        <!--<android.support.design.widget.FloatingActionButton-->
        <!--android:id="@+id/findRfidImageView"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="bottom|end"-->
        <!--android:backgroundTint="@color/white"-->
        <!--android:src="@drawable/ic_find_rfid"-->
        <!--app:borderWidth="0dp"-->
        <!--app:elevation="0dp"-->
        <!--app:fabCustomSize="48dp"-->
        <!--app:maxImageSize="32dp" />-->

    </android.support.v7.widget.CardView>
</LinearLayout>